# cyberex

./: .gitignore  Cargo.toml
.devcontainer/: devcontainer.json  docker-compose.yml
src/: lib.rs  void.rs  xself.rs
src/buf_pro/: chunk_by.rs  mod.rs  search.rs  split_by.rs
src/env/: eval.rs
src/xbuild/: cmake.rs  mod.rs  path.rs
src/xffi/: mod.rs  sto.rs  xtr.rs
tests/: test_chunk.rs  test_chunk_by.rs  test_sto.rs  test_void.rs  test_xasync.rs  test_xemcpy.rs  test_xffi_etc.rs  test_xself.rs
