[package]
name = "cyberex"
version = "0.1.24"
edition = "2021"
license = "MIT"
description = """
Utilities Library
"""
authors = ["Su", "469446490@qq.com"]
repository = "https://github.com/swq123459/cyberex.git"
keywords = ["utilities"]

exclude = [
    ".devcontainer/**",
    "tests/**",
    ".vscode/**"
]


[features]
default = []
full = ["enable-async"]
enable-async = ["tokio"]


[dependencies.tokio]
version = "^1"
features = ["full"]
optional = true

[dev-dependencies]
cyberex = { path = ".", features = ["full"] }