[package]
name = "cyberex"
version = "0.3.14"
edition = "2021"
license = "MIT"
description = """
Utilities Library
"""
authors = ["Su", "469446490@qq.com"]
repository = "https://github.com/swq123459/cyberex.git"
keywords = ["utilities"]

exclude = [
    ".devcontainer/**",
    "tests/**",
    ".vscode/**"
]


[features]
default = []
full = ["enable-async"]
enable-async = ["dep:tokio"]


[dependencies]
tokio = { version = "^1", default-features = false, features = ["sync"], optional = true }
anyhow = "1.0.82"

[dev-dependencies]
cyberex = { path = ".", features = ["full"] }
tokio = { version = "^1", features = ["full"]}
